--- a/css/style.css
+++ b/css/style.css
@@ -13,8 +13,11 @@ h2 {
   font-style: italic;
 }
 
+.completed {
+  font-family: "Arial";
+}
+
 #tasks .completed {
   background: #ccc;
   text-decoration: underline;
-  font-family: Arial;
 }
